Go back to using the 'role' attribute

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,7 +2,7 @@ name: Deploy Infrastructure
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ main ]
     paths:
       - 'docker-compose.yml'
       - 'nginx.conf'
