--- a/sqrl-expenses/squirrels.yml
+++ b/sqrl-expenses/squirrels.yml
@@ -29,50 +29,53 @@ connections:
 
 
 datasets:
-  - name: expense_transactions          ## model name uses same name unless "model" field is specified
+  - name: expense_transactions            ## model name uses same name unless "model" field is specified
     label: Expense Transactions
     description: All expense transactions
     model: dbview_example 
-    scope: public                         ## optional - one of 'public' (default), 'protected', or 'private'
+    scope: protected                      ## optional - one of 'public' (default), 'protected', or 'private'
     parameters:                           ## optional - if not specified, then all parameters are used
       - start_date
       - end_date
       - min_filter
       - max_filter
     traits: {}                            ## optional - defaults to empty object
+    default_test_set: test0               ## optional - if not specified, uses setting from environment variable 'SQRL.TEST_SETS.DEFAULT_NAME_USED'
   
   - name: grouped_expenses
     label: Grouped Expenses
     description: Total expense amounts grouped by some attribute
     model: federate_example 
-    scope: protected                      ## using an auth.py file is suggested for protected or private datasets
+    scope: protected
     parameters:
       - group_by
       - date_range
       - category
       - subcategory
       - between_filter
-    default_test_set: auth_test1          ## optional - if not specified, uses setting 'selection_test_sets.default_name_used'
+    default_test_set: test1
 
 
 selection_test_sets:
-  - name: no_auth_test1
+  - name: test0
     datasets:                             ## optional section - if not provided, then test set is applicable for any dataset
-      - expenses_by_month
+      - expense_transactions
+    user_attributes:
+      username: alice                     ## optional - defaults to empty string
     parameters:                           ## optional section - if not provided, then assumes no parameters. For unspecified parameters, default value is used
-      start_date: 2023-07-01              ## this parameter only exists for dataset 'dataset_example'
+      start_date: 2024-07-01              ## this parameter only exists for dataset 'dataset_example'
   
-  - name: auth_test1
+  - name: test1
     datasets:
       - grouped_expenses
     user_attributes:                      ## optional section - required if using test set on non-public datasets
       role: employee
     parameters:
-      date_range: [2023-02-01,2023-12-01] ## this parameter only exists for dataset 'protected_dataset_example'
+      date_range: [2024-02-01,2024-12-01] ## this parameter only exists for dataset 'protected_dataset_example'
     
-  - name: auth_test2
+  - name: test2
     user_attributes:
-      username: alice                     ## optional - defaults to empty string
+      username: alice
       is_admin: True                      ## optional - defaults to False
       role: manager
     parameters:
