--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,62 +1,49 @@
-name: Build, Push, Deploy.
+name: Deploy Infrastructure
 
 on:
   push:
     branches: [ main ]
-    paths: ['sqrl-mortgage-analysis/**']
+    paths:
+      - 'docker-compose.yml'
+      - 'nginx.conf'
+      - 'sqrl-expenses/**'
+      - 'sqrl-weather-analytics/**'
+      - 'sqrl-mortgage-analysis/**'
+      - '.github/workflows/ci_cd.yml'
     
 jobs:
-  build_and_push:
-    name: Push docker image to Docker Hub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v4
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          ecr: auto
-          logout: true
-          username: timhuang95
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-      - name: Extract metadata (labels, tags, etc.) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: timhuang95/mortgage-analysis-squirrels
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./sqrl-mortgage-analysis
-          push: true
-          tags: timhuang95/mortgage-analysis-squirrels:latest
-          labels: ${{ steps.meta.outputs.labels }}
-  
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' }}
     environment: prod
-    needs: [ build_and_push ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: copy file via ssh key
+      
+      - name: Copy full repository to server
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ vars.MORTGAGE_ANALYSIS_HOST }}
+          host: ${{ vars.SQUIRRELS_HOST }}
           username: ec2-user
-          key: ${{ secrets.MORTGAGE_ANALYSIS_KEY }}
-          source: "sqrl-mortgage-analysis/docker-compose.yml, sqrl-mortgage-analysis/nginx/nginx.conf"
-          target: .
-          strip_components: 1
-      - name: run docker-compose
+          key: ${{ secrets.SQUIRRELS_SSH_KEY }}
+          source: "."
+          target: "./app"
+          strip_components: 0
+      
+      - name: Rebuild and deploy all services
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ vars.MORTGAGE_ANALYSIS_HOST }}
+          host: ${{ vars.SQUIRRELS_HOST }}
           username: ec2-user
-          key: ${{ secrets.MORTGAGE_ANALYSIS_KEY }}
+          key: ${{ secrets.SQUIRRELS_SSH_KEY }}
           script: |
-            docker-compose down
-            docker rmi -f $(docker images -q)
-            docker-compose pull
+            # Change to the app directory
+            cd ./app
+            
+            # Rebuild all services since infrastructure changed
+            docker-compose build
+            
+            # Start all services
             docker-compose up -d
+            
+            # Clean up unused images
+            docker image prune -f 
