--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     image: squirrels-mortgage:latest
     restart: unless-stopped
     volumes:
+      - ~/volumes/sqrl-mortgage-analysis/.env:/app/.env:ro
       - ~/volumes/sqrl-mortgage-analysis/target:/app/target
     logging:
       driver: "json-file"
@@ -44,7 +45,7 @@ services:
     image: squirrels-weather:latest
     restart: unless-stopped
     volumes:
-      - ~/volumes/sqrl-weather-analytics/.env.local:/app/.env.local:ro
+      - ~/volumes/sqrl-weather-analytics/.env:/app/.env:ro
       - ~/volumes/sqrl-weather-analytics/target:/app/target
     logging:
       driver: "json-file"
@@ -61,7 +62,7 @@ services:
     image: squirrels-expenses:latest
     restart: unless-stopped
     volumes:
-      - ~/volumes/sqrl-expenses/.env.local:/app/.env.local:ro
+      - ~/volumes/sqrl-expenses/.env:/app/.env:ro
       - ~/volumes/sqrl-expenses/target:/app/target
     logging:
       driver: "json-file"
