--- a/sqrl-weather-analytics/requirements.txt
+++ b/sqrl-weather-analytics/requirements.txt
@@ -1,6 +1,6 @@
 annotated-types==0.7.0
 ansicon==1.89.0
-anyio==4.8.0
+anyio==4.9.0
 bcrypt==4.0.1
 blessed==1.20.0
 cachetools==5.5.2
@@ -8,8 +8,8 @@ click==8.1.8
 colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
-duckdb==1.2.0
-duckdb_engine==0.15.0
+duckdb==1.2.1
+duckdb_engine==0.17.0
 editor==1.6.6
 fastapi==0.112.4
 fonttools==4.56.0
@@ -19,28 +19,28 @@ greenlet==3.1.1
 h11==0.14.0
 idna==3.10
 inquirer==3.4.0
-Jinja2==3.1.5
+Jinja2==3.1.6
 jinxed==1.3.0
 joblib==1.4.2
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 networkx==3.4.2
-numpy==2.2.3
+numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
 passlib==1.7.4
 pillow==11.1.0
-polars==1.24.0
+polars==1.26.0
 pyarrow==18.1.0
-pydantic==2.10.6
-pydantic_core==2.27.2
+pydantic==2.11.1
+pydantic_core==2.33.0
 PyJWT==2.10.1
-pyparsing==3.2.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-dotenv==1.1.0
 python-multipart==0.0.9
-pytz==2025.1
+pytz==2025.2
 PyYAML==6.0.2
 readchar==4.2.1
 runs==1.2.2
@@ -49,13 +49,14 @@ scipy==1.15.2
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.38
+SQLAlchemy==2.0.40
 sqlglot==25.34.1
-squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@69e5ca2c88404aa16fa2754e3740a46a21f10f55
+squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@a34b573e1ca67f758e6b21c012dd9e51076af5f7
 starlette==0.38.6
-threadpoolctl==3.5.0
-typing_extensions==4.12.2
-tzdata==2025.1
+threadpoolctl==3.6.0
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2025.2
 uvicorn==0.30.6
 wcwidth==0.2.13
 xmod==1.8.1
