--- a/sqrl-expenses-slim/requirements.txt
+++ b/sqrl-expenses-slim/requirements.txt
@@ -21,6 +21,7 @@ inquirer==3.4.0
 Jinja2==3.1.6
 jinxed==1.3.0
 kiwisolver==1.4.8
+libpass==1.9.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 networkx==3.4.2
@@ -30,7 +31,7 @@ pandas==2.2.3
 passlib==1.7.4
 pillow==11.1.0
 polars==1.26.0
-pyarrow==18.1.0
+pyarrow==19.0.1
 pydantic==2.11.1
 pydantic_core==2.33.0
 PyJWT==2.10.1
@@ -46,8 +47,8 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.40
-sqlglot==25.34.1
-squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@67f2a5137765968c004d623d86c26fdef0dda8fd
+sqlglot==26.12.1
+squirrels==0.5.0b1
 starlette==0.38.6
 typing-inspection==0.4.0
 typing_extensions==4.13.0
