--- a/sqrl-expenses/requirements.txt
+++ b/sqrl-expenses/requirements.txt
@@ -1,7 +1,7 @@
 annotated-types==0.7.0
 ansicon==1.89.0
 anyio==4.9.0
-bcrypt==4.0.1
+bcrypt==4.3.0
 blessed==1.20.0
 cachetools==5.5.2
 click==8.1.8
@@ -10,8 +10,8 @@ contourpy==1.3.1
 cycler==0.12.1
 duckdb==1.2.1
 editor==1.6.6
-fastapi==0.112.4
-fonttools==4.56.0
+fastapi==0.115.12
+fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.1.1
@@ -21,6 +21,7 @@ inquirer==3.4.0
 Jinja2==3.1.6
 jinxed==1.3.0
 kiwisolver==1.4.8
+libpass==1.9.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 networkx==3.4.2
@@ -30,14 +31,14 @@ pandas==2.2.3
 passlib==1.7.4
 pillow==11.1.0
 polars==1.26.0
-pyarrow==18.1.0
-pydantic==2.11.1
-pydantic_core==2.33.0
+pyarrow==19.0.1
+pydantic==2.11.2
+pydantic_core==2.33.1
 PyJWT==2.10.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-python-multipart==0.0.9
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 readchar==4.2.1
@@ -46,12 +47,12 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.40
-sqlglot==25.34.1
-squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@a34b573e1ca67f758e6b21c012dd9e51076af5f7
-starlette==0.38.6
+sqlglot==26.12.1
+squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@060e8c40340a44ff54b728c1e6cf7195e9df6701
+starlette==0.46.1
 typing-inspection==0.4.0
-typing_extensions==4.13.0
+typing_extensions==4.13.1
 tzdata==2025.2
-uvicorn==0.30.6
+uvicorn==0.34.0
 wcwidth==0.2.13
 xmod==1.8.1
