--- a/sqrl-weather-analytics/requirements.in
+++ b/sqrl-weather-analytics/requirements.in
@@ -1,3 +1,3 @@
-squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@a34b573e1ca67f758e6b21c012dd9e51076af5f7
+squirrels==0.5.0b1
 scikit-learn==1.5.1
 duckdb-engine
