--- a/sqrl-expenses/Dockerfile
+++ b/sqrl-expenses/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 4465
 
-CMD ["sqrl", "run", "--host", "0.0.0.0", "--port", "4465"]
+CMD ["sqrl", "run", "--build", "--host", "0.0.0.0", "--port", "4465"]
