--- a/sqrl-weather-analytics/squirrels.yml
+++ b/sqrl-weather-analytics/squirrels.yml
@@ -9,6 +9,7 @@ packages: []
 
 connections:
   - name: default
+    label: SQLite Weather Database
     type: sqlalchemy
     uri: sqlite:///{project_path}/assets/weather.db
   
