--- a/sqrl-mortgage-analysis/requirements.txt
+++ b/sqrl-mortgage-analysis/requirements.txt
@@ -6,15 +6,15 @@ blessed==1.20.0
 cachetools==5.5.2
 click==8.1.8
 colorama==0.4.6
-contourpy==1.3.1
+contourpy==1.3.2
 cycler==0.12.1
-duckdb==1.2.1
+duckdb==1.2.2
 editor==1.6.6
 fastapi==0.115.12
 fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
-greenlet==3.1.1
+greenlet==3.2.1
 h11==0.14.0
 idna==3.10
 inquirer==3.4.0
@@ -25,13 +25,13 @@ libpass==1.9.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 networkx==3.4.2
-numpy==2.2.4
-packaging==24.2
+numpy==2.2.5
+packaging==25.0
 pandas==2.2.3
-pillow==11.1.0
-polars==1.26.0
+pillow==11.2.1
+polars==1.27.1
 pyarrow==19.0.1
-pydantic==2.11.2
+pydantic==2.11.3
 pydantic_core==2.33.1
 PyJWT==2.10.1
 pyparsing==3.2.3
@@ -47,12 +47,12 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.40
-sqlglot==26.12.1
-squirrels==0.5.0b1
-starlette==0.46.1
+sqlglot==26.16.0
+squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@5a52ec910a8031b4b67828034f6304d1caed81f1
+starlette==0.46.2
 typing-inspection==0.4.0
-typing_extensions==4.13.1
+typing_extensions==4.13.2
 tzdata==2025.2
-uvicorn==0.34.0
+uvicorn==0.34.2
 wcwidth==0.2.13
 xmod==1.8.1
