--- a/sqrl-mortgage-analysis/nginx-local.conf
+++ b/sqrl-mortgage-analysis/nginx-local.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    return 301 https://$host$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -11,7 +11,7 @@ server {
     ssl_certificate_key /etc/nginx/certs/privkey.pem;
     
     # Mortgage Analysis API
-    location /api {
+    location / {
         proxy_pass http://squirrels-mortgage:4465;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
