--- a/sqrl-mortgage-analysis/nginx.conf
+++ b/sqrl-mortgage-analysis/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    return 301 https://$host$request_uri;
+    return 308 https://$host$request_uri;
 }
 
 server {
@@ -8,12 +8,11 @@ server {
     server_name mortgage-squirrels-example.duckdns.org;
     server_tokens off;
 
-    ssl_certificate     /etc/letsencrypt/live/mortgage-squirrels-example.duckdns.org/fullchain.pem;
+    ssl_certificate      /etc/letsencrypt/live/mortgage-squirrels-example.duckdns.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/mortgage-squirrels-example.duckdns.org/privkey.pem;
-    ssl_dhparam         /etc/letsencrypt/dhparams.pem;
-    
-    # Mortgage Analysis API
-    location /api {
+    ssl_dhparam          /etc/letsencrypt/dhparams.pem;
+
+    location / {
         proxy_pass http://squirrels-mortgage:4465;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
