--- a/sqrl-expenses/requirements.txt
+++ b/sqrl-expenses/requirements.txt
@@ -1,38 +1,49 @@
 annotated-types==0.7.0
 ansicon==1.89.0
 anyio==4.9.0
+Authlib==1.6.0
 bcrypt==4.3.0
-blessed==1.20.0
+blessed==1.21.0
 cachetools==5.5.2
-click==8.1.8
+certifi==2025.4.26
+cffi==1.17.1
+click==8.2.1
 colorama==0.4.6
 contourpy==1.3.2
+cryptography==45.0.3
 cycler==0.12.1
 duckdb==1.2.2
 editor==1.6.6
 fastapi==0.115.12
-fonttools==4.57.0
+fonttools==4.58.2
 gitdb==4.0.12
 GitPython==3.1.44
-greenlet==3.2.0
-h11==0.14.0
+greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
 inquirer==3.4.0
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jinxed==1.3.0
 kiwisolver==1.4.8
-libpass==1.9.0
+libpass==1.9.1.post0
 MarkupSafe==3.0.2
-matplotlib==3.10.1
-networkx==3.4.2
-numpy==2.2.5
+matplotlib==3.10.3
+mcp==1.9.3
+networkx==3.5
+numpy==2.2.6
 packaging==25.0
-pandas==2.2.3
+pandas==2.3.0
 pillow==11.2.1
-polars==1.27.1
-pyarrow==19.0.1
-pydantic==2.11.3
-pydantic_core==2.33.1
+polars==1.30.0
+pyarrow==20.0.0
+pycparser==2.22
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
 PyJWT==2.10.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -45,13 +56,14 @@ runs==1.2.2
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.40
-sqlglot==26.15.0
-squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@ab0975acf7e91371b1ba337352dcd19f6bf40735
+SQLAlchemy==2.0.41
+sqlglot==26.25.3
+squirrels @ git+https://github.com/squirrels-analytics/squirrels.git@c0457d25ebe6a2bfd498eb9e325e451dbcd05330
+sse-starlette==2.3.6
 starlette==0.46.2
-typing-inspection==0.4.0
-typing_extensions==4.13.2
+typing-inspection==0.4.1
+typing_extensions==4.14.0
 tzdata==2025.2
-uvicorn==0.34.2
+uvicorn==0.34.3
 wcwidth==0.2.13
 xmod==1.8.1
