Add Google login provider to expenses example

--- a/.github/workflows/deploy_expenses_example.yml
+++ b/.github/workflows/deploy_expenses_example.yml
@@ -2,7 +2,7 @@ name: Deploy Expenses Analytics
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ main ]
     paths:
       - 'sqrl-expenses/**'
     
