--- a/.github/workflows/deploy_mortgage_example.yml
+++ b/.github/workflows/deploy_mortgage_example.yml
@@ -2,7 +2,7 @@ name: Deploy Mortgage Analysis
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ main ]
     paths:
       - 'sqrl-mortgage-analysis/**'
     
