--- a/sqrl-expenses/.env.example
+++ b/sqrl-expenses/.env.example
@@ -1,6 +1,9 @@
-# Secrets used by the Squirrels framework
-SQRL_SECRET__KEY="" # random 32 byte hex string; one way to generate this is by running "openssl rand -hex 32" in bash
-SQRL_SECRET__ADMIN_PASSWORD=""
-
 # Custom environment variables
 SQLITE_URI="sqlite:///{project_path}/assets/expenses.db"
+
+GOOGLE_CLIENT_ID=...
+GOOGLE_CLIENT_SECRET=...
+
+# Secrets used by the Squirrels framework
+SQRL_SECRET__KEY=... # random 32 byte hex string; one way to generate this is by running "openssl rand -hex 32" in bash
+SQRL_SECRET__ADMIN_PASSWORD=...
