--- a/sqrl-expenses/pyproject.toml
+++ b/sqrl-expenses/pyproject.toml
@@ -1,12 +1,9 @@
 [project]
 name = "sqrl-expenses"
 version = "0.1.0"
-description = "Add your description here"
+description = "Example Squirrels project for expenses analytics"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "squirrels",
+    "squirrels>=0.5.0",
 ]
-
-[tool.uv.sources]
-squirrels = { git = "https://github.com/squirrels-analytics/squirrels.git", rev = "main" }
