--- a/sqrl-weather-analytics/.env.example
+++ b/sqrl-weather-analytics/.env.example
@@ -1,2 +1,6 @@
 # Custom environment variables
-MOTHERDUCK_URI=""
+MOTHERDUCK_URI="..."
+
+# Secrets used by the Squirrels framework
+SQRL_SECRET__KEY="..."
+SQRL_SECRET__ADMIN_PASSWORD="..."
