--- a/sqrl-expenses/models/federates/federate_example.yml
+++ b/sqrl-expenses/models/federates/federate_example.yml
@@ -3,10 +3,10 @@ description: |
 
   Parameters are available to specify the group by dimension and filter by date, amount of the transaction, category, and subcategory.
 
-depends_on:
+depends_on:                # optional for SQL models - the "ref" macro also adds to this set
   - build_example
 
-eager: false   # Optional, defaults to false. Only applies to SQL models.
+eager: false               # optional - defaults to false. Only applies to SQL models.
 
 columns:
   - name: date
@@ -43,7 +43,7 @@ columns:
 
   - name: category
     type: string
-    condition: parameter 'group_by' (Group By) is 'trans' (Transaction), 'cat' (Category), or 'subcat' (Subcategory)
+    condition: parameter `group_by` (Group By) is `trans` (Transaction), `cat` (Category), or `subcat` (Subcategory)
     description: The category for which the amount is aggregated by
     category: dimension
     depends_on:
@@ -51,7 +51,7 @@ columns:
   
   - name: subcategory
     type: string
-    condition: parameter 'group_by' (Group By) is 'trans' (Transaction) or 'subcat' (Subcategory)
+    condition: parameter `group_by` (Group By) is `trans` (Transaction) or `subcat` (Subcategory)
     description: The subcategory for which the amount is aggregated by
     category: dimension
     depends_on:
