Update all examples to squirrels 0.5.4 - Remove docker files and references - Remove pickle file for linear regression model in weather example - Add dashboard to weather example

--- a/sqrl-expenses/models/dbviews/dbview_example.yml
+++ b/sqrl-expenses/models/dbviews/dbview_example.yml
@@ -4,9 +4,11 @@ description: |
 
   Parameters are available to filter the date and amount of the transactions.
 
-connection: default
+connection: default         # optional - if not provided, will use default connection specified in the SQRL_CONNECTIONS__DEFAULT_NAME_USED setting
 
-depends_on:
+translate_to_duckdb: false  # optional - default is false - if true, then the model will be translated to duckdb if dialect is supported by sqlglot
+
+depends_on:                 # optional - Squirrels is able to derive this from the "source" macro in the SQL file
   - src_transactions
 
 columns:
