--- a/sqrl-weather-analytics/.env.example
+++ b/sqrl-weather-analytics/.env.example
@@ -1,6 +1,7 @@
 # Custom environment variables
-MOTHERDUCK_URI="..."
+MOTHERDUCK_TOKEN="..."
+MOTHERDUCK_URI="duckdb:///md:squirrels_public_data_db"
 
-# Secrets used by the Squirrels framework
-SQRL_SECRET__KEY="..."
-SQRL_SECRET__ADMIN_PASSWORD="..."
+# # Secrets used by the Squirrels framework. Can optionally set them to enable admin features
+# SQRL_SECRET__KEY="..." # a random 32 byte hex string - you can generate this is by running `python -c "import secrets; print(secrets.token_hex(32))"`
+# SQRL_SECRET__ADMIN_PASSWORD="..."
