--- a/sqrl-expenses/squirrels.yml
+++ b/sqrl-expenses/squirrels.yml
@@ -3,6 +3,7 @@ project_variables:
   label: "Sample Expenses"
   description: This is a sample squirrels project for analyzing expense transactions
   major_version: 1
+  auth_type: optional                     ## one of 'optional' (default) or 'required'
 
 
 packages: []
@@ -31,11 +32,11 @@ connections:
 
 
 datasets:
-  - name: expense_transactions           ## model name uses same name unless "model" field is specified
+  - name: expense_transactions            ## model name uses same name unless "model" field is specified
     label: Expense Transactions - DBView Example
     description: All expense transactions
     model: dbview_example 
-    scope: private                        ## optional - one of 'public' (default), 'protected', or 'private'
+    scope: private                        ## optional - one of 'public', 'protected', or 'private'. Default is 'public' (if auth_type is 'optional') or 'protected' (if auth_type is 'required').
     parameters:                           ## optional - if not specified, then all parameters are used
       - start_date
       - end_date
@@ -45,8 +46,7 @@ datasets:
   - name: grouped_expenses
     label: Grouped Expenses - Federate Example
     description: Aggregated expense transactions by custom dimension using federate_example model
-    model: federate_example 
-    scope: public                         ## using an auth.py file is suggested for protected or private datasets
+    model: federate_example
     parameters:
       - group_by
       - date_range
