--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [project]
-name = "sqrl-weather-analytics"
+name = "squirrels-examples"
 version = "0.1.0"
-description = "Example Squirrels project for weather analytics"
+description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.14.*"
 dependencies = [
     "duckdb-engine>=0.17.0",
-    "scikit-learn>=1.5.1",
+    "fastapi>=0.128.0",
+    "scikit-learn>=1.8.0",
+    "scipy>=1.17.0",
     "squirrels",
-]
-
-[dependency-groups]
-dev = [
-    "ipykernel>=7.1.0",
+    "uvicorn>=0.40.0",
 ]
 
 [tool.uv.sources]
