--- a/sqrl-expenses/pyproject.toml
+++ b/sqrl-expenses/pyproject.toml
@@ -3,7 +3,10 @@ name = "sqrl-expenses"
 version = "0.1.0"
 description = "Example Squirrels project for expenses analytics"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = "==3.14.*"
 dependencies = [
-    "squirrels>=0.5.4",
+    "squirrels",
 ]
+
+[tool.uv.sources]
+squirrels = { git = "https://github.com/squirrels-analytics/squirrels" }
