--- a/sqrl-weather-analytics/squirrels.yml
+++ b/sqrl-weather-analytics/squirrels.yml
@@ -11,7 +11,7 @@ connections:
   - name: default
     label: SQLite Weather Database
     type: sqlalchemy
-    uri: sqlite:///{project_path}/assets/weather.db
+    uri: sqlite:///{project_path}/resources/weather.db
   
   ## First, run the following in your Motherduck account: ATTACH 'md:_share/squirrels_analytics_public_db/597bd9c2-72c8-49b9-8ed6-f3d4441fda24'
   - name: duckdb
