Use version of Squirrels with bug fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,4 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-squirrels = { git = "https://github.com/squirrels-analytics/squirrels" }
+squirrels = { git = "https://github.com/squirrels-analytics/squirrels.git" }
